--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Jack Stevens
-#logo: assets/file/headshot.jpg
+logo: assets/headshot.png
 #discription: Data Science Portfolio
 theme: jekyll-theme-minimal
