--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Jack Stevens
-logo: assets/headshot.png
+logo: assets/Headshot.png
 #discription: Data Science Portfolio
 theme: jekyll-theme-minimal
